--- a/2021_10_04_slice_masking/des-pizza-slices-y6-v9.yaml
+++ b/2021_10_04_slice_masking/des-pizza-slices-y6-v9.yaml
@@ -51,6 +51,7 @@ single_epoch:
   mask_tape_bumps: False
 
   # DES Y6 bit mask flags
+  # see this paper: https://arxiv.org/pdf/1801.03177.pdf
   # "BPM":          1,  #/* set in bpm (hot/dead pixel/column)        */
   # "SATURATE":     2,  #/* saturated pixel                           */
   # "INTERP":       4,  #/* interpolated pixel                        */
@@ -87,8 +88,21 @@ single_epoch:
   # star areas are ignored for now - GAIA masks will handle them or star-gal sep
   #  - 32    # STAR
   #  - 2048  # SUSPECT
+  #  - 4096  # FIXED by DESDM reliably
+  #  - 8192  # NEAREDGE 25 bad columns on each edge, removed anyways due to 48 pixel boundry
   #  - 16384 # TAPEBUMP
 
   bad_image_flags:
     # data from non-functional amplifiers is ignored
     - 8     # BADAMP
+
+  gaia_star_masks:
+    poly_coeffs: [1.36055007e-03, -1.55098040e-01,  3.46641671e+00]
+    max_g_mag: 18.0
+    symmetrize: False
+    # interp:
+    #   fill_isolated_with_noise: False
+    #   iso_buff: 1
+    apodize:
+      ap_rad: 1
+    mask_expand_rad: 16
