--- a/.gitignore
+++ b/.gitignore
@@ -137,6 +137,8 @@ dmypy.json
 *~
 *.pkl
 condor-exec/
+*.pq
 
 2022_01_22_run_mdet_final_v1/data_final
 2022_01_22_run_mdet_final_v1/mdet_data
+2022_01_26_run_mdet_final_v1_wmom/data_final
