--- a/2022_02_04_imsims_tests_desy6/config.yaml
+++ b/2022_02_04_imsims_tests_desy6/config.yaml
@@ -133,7 +133,7 @@ output:
     tilename: DES2359-6539
     bands: [i]
     desrun: y3v02
-    imsim_data: ${IMSIM_DATA}
+    imsim_data: "$os.environ['IMSIM_DATA']"
     noise_mode: from_weight
     add_bkg: False
 
