--- a/2022_02_04_imsims_tests_desy6/config.yaml
+++ b/2022_02_04_imsims_tests_desy6/config.yaml
@@ -132,7 +132,7 @@ output:
     # The number of exposures to build
     tilename: DES2359-6539
     bands: [i]
-    desrun: y3v02
+    desrun: des-pizza-slices-y6-v12
     imsim_data: "$os.environ['IMSIM_DATA']"
     noise_mode: from_weight
     add_bkg: False
