--- a/.gitignore
+++ b/.gitignore
@@ -142,3 +142,8 @@ condor-exec/
 2022_01_22_run_mdet_final_v1/data_final
 2022_01_22_run_mdet_final_v1/mdet_data
 2022_01_26_run_mdet_final_v1_wmom/data_final
+
+2022_02_04_run_mdet_final_v1_nog/data_final/
+2022_02_04_run_mdet_final_v1_nog/data_final_nogcut/
+2022_01_22_run_mdet_final_v1/data_final_nogcut/
+2022_02_04_imsims_tests_desy6/sim_outputs/
