--- a/.gitignore
+++ b/.gitignore
@@ -147,3 +147,5 @@ condor-exec/
 2022_02_04_run_mdet_final_v1_nog/data_final_nogcut/
 2022_01_22_run_mdet_final_v1/data_final_nogcut/
 2022_02_04_imsims_tests_desy6/sim_outputs/
+2022_02_17_se_pgauss_cte/condor-yield/*
+2022_01_22_run_mdet_final_v1/data/*
