ignore more things

--- a/.gitignore
+++ b/.gitignore
@@ -135,9 +135,11 @@ dmypy.json
 *.zip
 *.jpg
 *~
+*.pdf
 *.pkl
 condor-exec/
 *.pq
+*.oe
 
 2022_01_22_run_mdet_final_v1/data_final
 2022_01_22_run_mdet_final_v1/mdet_data
