--- a/2022_02_04_imsims_tests_desy6/config.yaml
+++ b/2022_02_04_imsims_tests_desy6/config.yaml
@@ -5,7 +5,7 @@ modules:
     - numpy
 
 pipeline:
-    steps: [galsim_montara, single_band_swarp, swarp, src_extractor, meds]
+    steps: [galsim_montara, single_band_swarp, swarp, src_extractor, coadd_ngwint, meds]
 
 galsim_montara: {}
 
@@ -31,6 +31,7 @@ single_band_swarp: {}
 swarp:
     coadd_bands: ['r', 'i', 'z']
 src_extractor: {}
+coadd_ngwint: {}
 
 image:
     type: WideScattered
