--- a/2022_06_29_balrog_eastlake/config.yaml
+++ b/2022_06_29_balrog_eastlake/config.yaml
@@ -1,115 +1,17 @@
 modules:
-    - galsim.des
-    - galsim_extra
-    - montara
-    - numpy
+  - galsim.des
+  - galsim_extra
+  - montara
+  - numpy
 
 pipeline:
-    steps: [galsim_montara, coadd_nwgint, swarp, src_extractor, meds, pizza_cutter, metadetect]
+  steps: [stash_prep, coadd_nwgint]
 
-galsim_montara: {}
+stash_prep:
+  desrun: "des-pizza-slices-y6-v12"
+  imsim_data: "$os.environ['IMSIM_DATA']"
+  bands: ["g", "r", "i", "z"]
+  tilename: DES2359-6539
 
-# delete_images:
-#     delete_coadd: True
-#     delete_se: True
-#     save_tilenames:
-#     - DES0003-3832
-#
-# delete_meds:
-#     save_tilenames: [DES0003-3832]
-#
-meds:
-    cutout_types: ['image','weight','seg','bmask']
-    add_psf_data: True
-    use_joblib: True
-    use_rejectlist: False
-
-single_band_swarp: {}
-swarp:
-    coadd_bands: ['r', 'i', 'z']
-src_extractor: {}
-coadd_nwgint: {}
-pizza_cutter: {}
-metadetect:
-  bands: ["r", "i", "z"]
-
-image:
-    type: WideScattered
-    border: 15
-
-    # The number of objects across the full focal plane.
-    nobjects: 100
-
-    #could read this from the image headers, but let's set them explicitly for now
-    xsize: 2048
-    ysize: 4096
-
-    world_pos:
-        type: RADec
-        type: RADec
-        ra:
-            type: Degrees
-            theta: { type: Random, min: "$ra_min_deg", max: "$ra_max_deg" }
-        dec:
-            type: Radians
-            theta:
-                type: RandomDistribution
-                function: "math.cos(x)"  # Uniform on the sky means P(delta) ~ cos(delta)
-                x_min: "$numpy.radians(dec_min_deg)"
-                x_max: "$numpy.radians(dec_max_deg)"
-
-
-psf:
-    type: Gaussian
-    sigma : 1
-
-gal:
-  type: Exponential
-  half_light_radius: 0.5
-  flux: 64000.0
-
-star:
-    type: Gaussian
-    sigma: 1.e-6
-    flux: 0
-
-stamp:
-    type: MixedScene
-    objects:
-        star: 0
-        gal: 1
-    draw_method: auto
-    shear:
-        type: G1G2
-        g1: 0.02
-        g2: 0.00
-    gsparams:
-        maximum_fft_size: 16384
-
-output:
-    type: DESTile
-    nproc: 16
-    # The number of exposures to build
-    tilename: DES2359-6539
-    bands: ['r', 'i', 'z']
-    desrun: "des-pizza-slices-y6-v12"
-    imsim_data: "$os.environ['IMSIM_DATA']"
-    noise_mode: from_weight
-    add_bkg: False
-    n_se_test: 3
-
-    #Save weight and badpix extensions too
-    badpixfromfits:
-        hdu: 1
-        mask_hdu: 2
-        mask_file: "$orig_image_path"
-    weight:
-        hdu: 2
-
-    truth:
-        columns:
-            num: obj_num
-            g1: "$(@stamp.shear).g1"
-            g2: "$(@stamp.shear).g2"
-            band: "band"
-            mag_zp: "$mag_zp"
+coadd_nwgint:
+  run_on_inputs: True
