--- a/2022_06_29_balrog_eastlake/des-pizza-slices-y6-v12.yaml
+++ b/2022_06_29_balrog_eastlake/des-pizza-slices-y6-v12.yaml
@@ -1,7 +1,7 @@
 des_data:
   campaign: Y6A2_COADD
   source_type: finalcut
-  piff_campaign: Y6A2_PIFF_v2
+  piff_campaign: null
 
 # optional but these are good defaults
 fpack_pars:
