--- a/2022_07_11_imsims_tests_desy6/config.yaml
+++ b/2022_07_11_imsims_tests_desy6/config.yaml
@@ -5,7 +5,7 @@ modules:
     - numpy
 
 pipeline:
-    steps: [galsim_montara, pizza_cutter, metadetect]
+    steps: [galsim_montara, true_detection, pizza_cutter, metadetect]
 
 galsim_montara: {}
 
