--- a/2022_07_11_imsims_tests_desy6/config.yaml
+++ b/2022_07_11_imsims_tests_desy6/config.yaml
@@ -32,6 +32,9 @@ coadd_nwgint: {}
 pizza_cutter: {}
 metadetect:
   bands: ["r", "i", "z"]
+true_detection:
+  box_size: 48
+
 
 image:
     type: WideScattered
