--- a/2022_07_11_imsims_tests_desy6/config.yaml
+++ b/2022_07_11_imsims_tests_desy6/config.yaml
@@ -1,16 +1,16 @@
 modules:
-    - galsim.des
-    - galsim_extra
-    - montara
-    - numpy
+  - galsim.des
+  - galsim_extra
+  - montara
+  - numpy
 
 pipeline:
-    steps: steps: [galsim_montara, true_detection, pizza_cutter, metadetect]
+  steps: [galsim_montara, true_detection, pizza_cutter, metadetect]
 
 galsim_montara: {}
 
 true_detection:
-    box_size: 48
+  box_size: 48
 
 pizza_cutter:
   config_file: ./des-pizza-slices-y6-v14.yaml
@@ -20,34 +20,34 @@ metadetect:
 
 
 image:
-    type: WideScattered
-    border: 15
+  type: WideScattered
+  border: 15
 
-    # The number of objects across the full focal plane.
-    nobjects: 100
+  # The number of objects across the full focal plane.
+  nobjects: 100
 
-    #could read this from the image headers, but let's set them explicitly for now
-    xsize: 2048
-    ysize: 4096
+  #could read this from the image headers, but let's set them explicitly for now
+  xsize: 2048
+  ysize: 4096
 
-    world_pos:
-        type: RADec
-        type: RADec
-        ra:
-            type: Degrees
-            theta: { type: Random, min: "$ra_min_deg", max: "$ra_max_deg" }
-        dec:
-            type: Radians
-            theta:
-                type: RandomDistribution
-                function: "math.cos(x)"  # Uniform on the sky means P(delta) ~ cos(delta)
-                x_min: "$numpy.radians(dec_min_deg)"
-                x_max: "$numpy.radians(dec_max_deg)"
+  world_pos:
+    type: RADec
+    type: RADec
+    ra:
+      type: Degrees
+      theta: { type: Random, min: "$ra_min_deg", max: "$ra_max_deg" }
+    dec:
+      type: Radians
+      theta:
+        type: RandomDistribution
+        function: "math.cos(x)"  # Uniform on the sky means P(delta) ~ cos(delta)
+        x_min: "$numpy.radians(dec_min_deg)"
+        x_max: "$numpy.radians(dec_max_deg)"
 
 
 psf:
-    type: Gaussian
-    sigma : 1
+  type: Gaussian
+  sigma : 1
 
 gal:
   type: Exponential
@@ -55,48 +55,48 @@ gal:
   flux: 64000.0
 
 star:
-    type: Gaussian
-    sigma: 1.e-6
-    flux: 0
+  type: Gaussian
+  sigma: 1.e-6
+  flux: 0
 
 stamp:
-    type: MixedScene
-    objects:
-        star: 0
-        gal: 1
-    draw_method: auto
-    shear:
-        type: G1G2
-        g1: 0.02
-        g2: 0.00
-    gsparams:
-        maximum_fft_size: 16384
+  type: MixedScene
+  objects:
+    star: 0
+    gal: 1
+  draw_method: auto
+  shear:
+    type: G1G2
+    g1: 0.02
+    g2: 0.00
+  gsparams:
+    maximum_fft_size: 16384
 
 output:
-    type: DESTile
-    nproc: 16
-    # The number of exposures to build
-    tilename: DES0433-2332
-    bands: ['r']
-    desrun: "des-pizza-slices-y6-v14"
-    imsim_data: "$os.environ['IMSIM_DATA']"
-    noise_mode: from_weight
-    add_bkg: False
-    n_se_test: 20
-    grid_objects: True
+  type: DESTile
+  nproc: 16
+  # The number of exposures to build
+  tilename: DES0433-2332
+  bands: ['r']
+  desrun: "des-pizza-slices-y6-v14"
+  imsim_data: "$os.environ['IMSIM_DATA']"
+  noise_mode: from_weight
+  add_bkg: False
+  n_se_test: 20
+  grid_objects: True
 
-    #Save weight and badpix extensions too
-    badpixfromfits:
-        hdu: 1
-        mask_hdu: 2
-        mask_file: "$orig_image_path"
-    weight:
-        hdu: 2
+  #Save weight and badpix extensions too
+  badpixfromfits:
+    hdu: 1
+    mask_hdu: 2
+    mask_file: "$orig_image_path"
+  weight:
+    hdu: 2
 
-    truth:
-        columns:
-            num: obj_num
-            g1: "$(@stamp.shear).g1"
-            g2: "$(@stamp.shear).g2"
-            band: "band"
-            mag_zp: "$mag_zp"
+  truth:
+    columns:
+      num: obj_num
+      g1: "$(@stamp.shear).g1"
+      g2: "$(@stamp.shear).g2"
+      band: "band"
+      mag_zp: "$mag_zp"
