--- a/2022_07_11_imsims_tests_desy6/config.yaml
+++ b/2022_07_11_imsims_tests_desy6/config.yaml
@@ -52,7 +52,7 @@ psf:
 gal:
   type: Exponential
   half_light_radius: 0.5
-  flux: 64000.0
+  flux: "$10**(0.4*(mag_zp-18.0))"
 
 star:
   type: Gaussian
