--- a/2022_08_25_image_sims_debug_mproc/config.yaml
+++ b/2022_08_25_image_sims_debug_mproc/config.yaml
@@ -93,7 +93,7 @@ stamp:
 
 output:
   type: DESTile
-  nproc: -1  
+  n_se_test: 24
   # The number of exposures to build
   tilename: DES0433-2332
   bands: ['r']
