--- a/.gitignore
+++ b/.gitignore
@@ -178,3 +178,8 @@ condor-exec/
 2022_07_22_run_mdet_new_piff_wmom/Untitled.ipynb
 
 
+2022_08_24_blind_and_test_final_cats/mdet_data
+2022_08_25_image_sims_debug_mproc/eastlake
+2022_08_25_image_sims_debug_mproc/montara
+2022_08_25_image_sims_debug_mproc/sim_outputs_impar
+2022_08_25_image_sims_debug_mproc/sim_outputs_outpar
