ENH more for testing

--- a/.gitignore
+++ b/.gitignore
@@ -183,3 +183,4 @@ condor-exec/
 2022_08_25_image_sims_debug_mproc/montara
 2022_08_25_image_sims_debug_mproc/sim_outputs_impar
 2022_08_25_image_sims_debug_mproc/sim_outputs_outpar
+2022_09_20_color_dep_meds/meds_dir
