--- a/.gitignore
+++ b/.gitignore
@@ -184,3 +184,5 @@ condor-exec/
 2022_08_25_image_sims_debug_mproc/sim_outputs_impar
 2022_08_25_image_sims_debug_mproc/sim_outputs_outpar
 2022_09_20_color_dep_meds/meds_dir
+2022_09_20_color_dep_meds/meds
+2022_09_20_color_dep_meds/desmeds
