ENH add ranges in right spot

--- a/2022_09_20_color_dep_meds/Y6A1_test_piff.yaml
+++ b/2022_09_20_color_dep_meds/Y6A1_test_piff.yaml
@@ -11,6 +11,8 @@ psf:
     type: piff
     stamp_size: 25
     use_color: True
+    gi_color_range: [0.0, 3.0]
+    iz_color_range: [0.0, 0.7]
 
   coadd:
     type: psfex
