--- a/2022_12_02_mdet_gauss_test/metadetect-v8.yaml
+++ b/2022_12_02_mdet_gauss_test/metadetect-v8.yaml
@@ -10,7 +10,7 @@ fitters:
   - model: pgauss
     weight:
       fwhm: 2.0
-    symmetrize: True
+    symmetrize: False
   - model: gauss
     weight:
       fwhm: 2.0
