--- a/2022_12_02_mdet_gauss_test/metadetect-v8.yaml
+++ b/2022_12_02_mdet_gauss_test/metadetect-v8.yaml
@@ -10,11 +10,11 @@ fitters:
   - model: pgauss
     weight:
       fwhm: 2.0
-    symmetrize: True
-  - model: gauss
+    symmetrize: False
+  - model: am
     weight:
       fwhm: 2.0
-    symmetrize: False
+    symmetrize: True
 
 shear_band_combs: [[1, 2, 3]]
 det_band_combs: [[0, 1, 2, 3]]
