--- a/.gitignore
+++ b/.gitignore
@@ -188,3 +188,6 @@ condor-exec/
 2022_09_20_color_dep_meds/meds
 2022_09_20_color_dep_meds/desmeds
 2022_09_20_color_dep_meds/meds_dir_v1
+2022_10_05_test_cuts_v1/data
+
+**/blinded_data*/*
