--- a/.gitignore
+++ b/.gitignore
@@ -189,5 +189,6 @@ condor-exec/
 2022_09_20_color_dep_meds/desmeds
 2022_09_20_color_dep_meds/meds_dir_v1
 2022_10_05_test_cuts_v1/data
+2022_12_15_color_dep_meds_obj_cen/desmeds
 
 **/blinded_data*/*
