BUG wrong draw method

--- a/2023_04_03_image_sims_piff/config.yaml
+++ b/2023_04_03_image_sims_piff/config.yaml
@@ -60,7 +60,7 @@ stamp:
   objects:
     star: 0
     gal: 1
-  draw_method: auto
+  draw_method: no_pixel
   # shear_scene: False
   shear:
     type: G1G2
