BUG put logs in right spot

--- a/2023_05_09_imsims_noise_debug/wq18.yaml
+++ b/2023_05_09_imsims_noise_debug/wq18.yaml
@@ -4,5 +4,5 @@ command: |
   source ~/.bashrc
   conda activate des-y6-imsims
   echo `which python`
-  ./run_sims.sh 18 &> log.oe
+  ./run_sims.sh 18 &> log18.oe
 
