--- a/2023_05_09_imsims_noise_debug/wq23.yaml
+++ b/2023_05_09_imsims_noise_debug/wq23.yaml
@@ -4,5 +4,5 @@ command: |
   source ~/.bashrc
   conda activate des-y6-imsims
   echo `which python`
-  ./run_sims.sh 23 &> log.oe
+  ./run_sims.sh 23 &> log23.oe
 
